# hookman

./: .hookman.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
share/: hookman.toml
src/: main.rs
templates/: hook.sh
