[package]
name = "hookman"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
color-eyre = "0.5.11"
dirs = "3.0.2"
env_logger = "0.9.0"
eyre = "0.6.5"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.22"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.2.0"
